fix the iframe responsivness and header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ header #menu a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: stretch;
   padding: 20px;
 }
 
@@ -134,8 +134,10 @@ header #menu a:hover {
 }
 
 .section1-iframe {
-  width: 890px;
-  height: 560px;
+  /* width: 890px;
+  height: 560px; */
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   padding-top: 20px;
   padding-left: 25px;
@@ -361,6 +363,13 @@ button:hover {
     flex-direction: column;
   }
 
+  .section1-content h1 {
+    text-align: center; 
+  }
+
+  .section2-content h1 {
+    text-align: center; 
+  }
   .section1-text,
   .section1-image-container {
     flex: 1 1 100%;
@@ -396,7 +405,6 @@ button:hover {
   
   ul {
     flex-direction: column;
-
   }
 
 }
